--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "cmake.configureOnOpen": false,
-    "csv-edit.readOption_hasHeader": "true"
+    "csv-edit.readOption_hasHeader": "true",
+    "oxcYamlHelper.rulesetDocumentationSettings": 0
 }
