--- a/metadata.yml
+++ b/metadata.yml
@@ -1,7 +1,7 @@
 name: "Counter-Terrorist Operations"
-version: "0.1.1"
-requiredExtendedVersion: "7.0"
-author: "Filip H and efrenespartano + IDT"
+version: "1.0"
+requiredExtendedVersion: "7.11"
+author: "Filip H, efrenespartano, wethan2 + IDT"
 description: "Lead a International Task Unit in a fight against terrorist forces."
 id: CTO
 isMaster: true
